// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test form with input 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller var-input--disabled\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input var-input--disabled\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line var-input--line-disabled\\">
      <div class=\\"var-input__dot var-input--line-disabled\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with input 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with input 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller var-input--error\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input var-input--caret-error\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line var-input--line-error\\">
      <div class=\\"var-input__dot var-input--line-error\\"></div>
    </div>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__message\\">不能为空</div>
        <div class=\\"var-form-details__length\\"></div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with input 4`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-input var--box\\">
    <div class=\\"var-input__controller\\">
      <div class=\\"var-input__icon\\"></div>
      <div class=\\"var-input__wrap\\">
        <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\"></label>
      </div>
      <div class=\\"var-input__icon\\">
        <!--v-if-->
      </div>
    </div>
    <div class=\\"var-input__line\\">
      <div class=\\"var-input__dot\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with select 1`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-select var--box var-select--disabled\\">
    <div class=\\"var-select__controller var-select--disabled\\">
      <div class=\\"var-select__icon\\"></div>
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__wrap\\">
          <div class=\\"var-select__select var-select--disabled\\" style=\\"text-align: left;\\">
            <div>
              <div class=\\"var-select__chips\\">
                <transition-stub><span class=\\"var-chip var--box var-chip--small var--inline-flex var-chip--default var-chip--round var-select__chip\\" var-select-cover=\\"\\"><span class=\\"var-chip--text-small\\">选项1</span><span class=\\"var-chip--close\\"><i class=\\"var-icon var-icon--set var-icon-close-circle\\" style=\\"transition: transform 0ms;\\"></i></span></span></transition-stub>
              </div>
            </div><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i>
          </div><label class=\\"var-select__placeholder var--ellipsis var-select--disabled var-select--placeholder-hint\\"></label>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <div class=\\"var-select__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-select__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\"></i></div>
    </div>
    <div class=\\"var-select__line var-select--line-disabled\\">
      <div class=\\"var-select__dot var-select--line-disabled\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with select 2`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-select var--box\\">
    <div class=\\"var-select__controller\\">
      <div class=\\"var-select__icon\\"></div>
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__wrap\\">
          <div class=\\"var-select__select\\" style=\\"text-align: left;\\">
            <div>
              <div class=\\"var-select__chips\\">
                <transition-stub><span class=\\"var-chip var--box var-chip--small var--inline-flex var-chip--default var-chip--round var-select__chip\\" var-select-cover=\\"\\"><span class=\\"var-chip--text-small\\">选项1</span><span class=\\"var-chip--close\\"><i class=\\"var-icon var-icon--set var-icon-close-circle\\" style=\\"transition: transform 0ms;\\"></i></span></span></transition-stub>
              </div>
            </div><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i>
          </div><label class=\\"var-select__placeholder var--ellipsis var-select--placeholder-hint\\"></label>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <div class=\\"var-select__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-select__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\"></i></div>
    </div>
    <div class=\\"var-select__line\\">
      <div class=\\"var-select__dot\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with select 3`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-select var--box\\">
    <div class=\\"var-select__controller var-select--error\\">
      <div class=\\"var-select__icon\\"></div>
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__wrap\\">
          <div class=\\"var-select__select var-select--error\\" style=\\"text-align: left;\\">
            <div>
              <div class=\\"var-select__chips\\">
                <transition-stub><span class=\\"var-chip var--box var-chip--small var--inline-flex var-chip--danger var-chip--round var-select__chip\\" var-select-cover=\\"\\"><span class=\\"var-chip--text-small\\">选项1</span><span class=\\"var-chip--close\\"><i class=\\"var-icon var-icon--set var-icon-close-circle\\" style=\\"transition: transform 0ms;\\"></i></span></span></transition-stub>
              </div>
            </div><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i>
          </div><label class=\\"var-select__placeholder var--ellipsis var-select--placeholder-hint\\"></label>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <div class=\\"var-select__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-select__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\"></i></div>
    </div>
    <div class=\\"var-select__line var-select--line-error\\">
      <div class=\\"var-select__dot var-select--line-error\\"></div>
    </div>
    <transition-stub>
      <div class=\\"var-form-details\\">
        <div class=\\"var-form-details__message\\">选择必须多于1个</div>
        <div class=\\"var-form-details__length\\"></div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`test form with select 4`] = `
"<div class=\\"var-form\\">
  <div class=\\"var-select var--box\\">
    <div class=\\"var-select__controller\\">
      <div class=\\"var-select__icon\\"></div>
      <div class=\\"var-menu var-select__menu\\" var-select-cover=\\"\\">
        <div class=\\"var-select__wrap\\">
          <div class=\\"var-select__select\\" style=\\"text-align: left;\\">
            <div>
              <div class=\\"var-select__chips\\"></div>
            </div><i class=\\"var-icon var-icon--set var-icon-menu-down var-select__arrow\\" style=\\"transition: transform 300ms;\\" var-select-cover=\\"\\"></i>
          </div><label class=\\"var-select__placeholder var--ellipsis\\"></label>
        </div>
        <!--teleport start-->
        <!--teleport end-->
      </div>
      <div class=\\"var-select__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-select__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\"></i></div>
    </div>
    <div class=\\"var-select__line\\">
      <div class=\\"var-select__dot\\"></div>
    </div>
    <transition-stub>
      <!--v-if-->
    </transition-stub>
  </div>
</div>"
`;
